22-12-24 Stabiliseretmed lidt fejl håndtering. Stadig mange debug logs indbygget.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RM IT Besked</string>
+    <string name="it_information">IT Information</string>
 </resources>
